# portfolio

./: .gitignore  pyproject.toml
docs/: test.txt
notebooks/: 01_exploration.ipynb  01_exploration_Weather_picnic.ipynb  02_base_model_Weather_picnic.ipynb  03_apply_model_Weather_picnic.ipynb  test.txt
