[project]
name = "dpp-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "duckdb>=1.4.1",
    "scikit-learn>=1.7.2",
    "openmeteo-requests==1.7.5",
    "requests-cache==1.3.1",
    "retry-requests==2.0.0",
    "geopy==2.4.1",
    "meteostat>=2.1.4",
    "datetime>=6.0",
    "elevation>=1.1.3",
    "xgboost>=3.2.0",
    "joblib>=1.5.2",
    "ipywidgets>=8.1.8",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "core"
